--- a/styles/org.css
+++ b/styles/org.css
@@ -215,7 +215,7 @@ footer li a {
   display: flex;
   position: fixed;
   width: 100%;
-  height: 100%;
+  top: 90%;
   justify-content: flex-end;
   align-items: flex-end;
 }
