--- a/styles/org.css
+++ b/styles/org.css
@@ -100,7 +100,7 @@ nav {
 
 /* BOARD2 */
 #board2 {
-  background-color: #082848;
+  background-color: teal;
 }
 #board2 .categories {
   max-width: 95vw;
