--- a/styles/index.css
+++ b/styles/index.css
@@ -1,55 +1,61 @@
 /* GENERAL SET*/
 * {
-  margin: 0;
-  padding: 0;
+ margin: 0;
+ padding: 0;
 }
 a {
-  text-decoration: none;
+ text-decoration: none;
 }
 li {
-  list-style: none;
+ list-style: none;
 }
 html {
-  scroll-behavior: smooth;
+ scroll-behavior: smooth;
 }
 
 .logo {
-  min-height: 700px;
+ min-height: 700px;
 
-  background: url(../pictures/logofront.jpg);
-  background-attachment: scroll;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  display: flex;
+ background: url(../pictures/logofront.jpg);
+ background-attachment: scroll;
+ background-attachment: fixed;
+ background-position: center;
+ background-size: cover;
+ display: flex;
 }
 
 .name {
-  text-align: center;
-  font-size: 20pt;
-  padding: 15px 30px;
+ text-align: center;
+ font-size: 20pt;
+ padding: 15px 30px;
 }
 #board article .items ul {
-  list-style: none;
+ list-style: none;
+}
+#board2 .categories a {
+ color: #10a8d8;
 }
 #fade {
-  opacity: 0;
+ opacity: 0;
 }
 
 /* SUCCOR APPS */
-#succors {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+#succors :not(img) {
+ display: flex;
+ flex-wrap: wrap;
+ flex-direction: column;
 }
 
 /* FOOTER PART */
 .dev {
-  color: white;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0;
+ color: white;
+ display: flex;
+ flex-wrap: wrap;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ margin: 20px 0;
+}
+canvas {
+ background-color: black;
 }
