--- a/Bd_Template_Pass/des.css
+++ b/Bd_Template_Pass/des.css
@@ -1,157 +1,164 @@
+* {
+ box-sizing: border-box;
+}
 .context {
-  position: absolute;
-  display: flex;
+ position: absolute;
+ display: flex;
 
-  flex-direction: column;
+ flex-direction: column;
 
-  justify-content: center;
-  align-items: center;
-  top: 50%;
-  transform: translateY(-50%);
+ justify-content: center;
+ align-items: center;
+ top: 50%;
+ transform: translateY(-50%);
 
-  width: 100%;
-  margin: 0;
-  padding: 0;
+ width: 100%;
+ margin: 0;
+ padding: 0;
 }
 img {
-  width: 300px;
-  margin: 0;
-  padding: 0;
-  height: 300px;
-  border-radius: 50%;
+ width: 100%;
+ margin: 0;
+ padding: 0;
+ height: 100%;
+}
+.image {
+ width: 300px;
+ height: 300px;
+ border-radius: 50%;
 }
 .context h2 {
-  font-size: 72pt;
-  color: white;
-  text-align: center;
-  font-weight: lighter;
-  font-family: "Bilbo", cursive;
-  margin: 0;
-  padding: 0;
+ font-size: 72pt;
+ color: white;
+ text-align: center;
+ font-weight: lighter;
+ font-family: "Bilbo", cursive;
+ margin: 0;
+ padding: 0;
 }
 .context h3 {
-  font-size: 44pt;
-  color: white;
-  text-align: center;
-  font-weight: lighter;
-  font-family: "Bilbo", cursive;
-  margin: 0;
-  padding: 0;
+ font-size: 44pt;
+ color: white;
+ text-align: center;
+ font-weight: lighter;
+ font-family: "Bilbo", cursive;
+ margin: 0;
+ padding: 0;
 }
 p {
-  font-size: 14pt;
-  color: white;
-  text-align: center;
-  font-family: "Courgette", cursive;
-  margin: 0;
-  padding: 0;
+ font-size: 14pt;
+ color: white;
+ text-align: center;
+ font-family: "Courgette", cursive;
+ margin: 0;
+ padding: 0;
 }
 .ball div {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  background: linear-gradient(90deg, deepskyblue, magenta, yellow, deepskyblue);
-  border-radius: 50%;
-  box-sizing: border-box;
-  background-color: l;
-  animation: colormove 10s linear infinite;
-  background-size: 400%;
+ position: absolute;
+ width: 100px;
+ height: 100px;
+ background: linear-gradient(90deg, deepskyblue, magenta, yellow, deepskyblue);
+ border-radius: 50%;
+ box-sizing: border-box;
+ background-color: l;
+ animation: colormove 10s linear infinite;
+ background-size: 400%;
 }
 
 @keyframes colormove {
-  0% {
-    background-position: 0%;
-  }
-  100% {
-    background-position: 400%;
-  }
+ 0% {
+  background-position: 0%;
+ }
+ 100% {
+  background-position: 400%;
+ }
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+ margin: 0;
+ padding: 0;
+ width: 100%;
+ height: 100%;
 
-  overflow: hidden;
+ overflow: hidden;
 }
 
 .con {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(#333, #000);
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ background: radial-gradient(#333, #000);
 }
 .set {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ top: 0;
+ left: 0;
 }
 
 .ball {
-  position: absolute;
-  display: block;
+ position: absolute;
+ display: block;
 }
 .ball:nth-child(1) {
-  left: 20%;
-  animation: animR 26s linear infinite;
-  animation-delay: -7;
+ left: 20%;
+ animation: animR 26s linear infinite;
+ animation-delay: -7;
 }
 .ball:nth-child(2) {
-  left: 50%;
-  animation: animL 20s linear infinite;
-  animation-delay: -5;
+ left: 50%;
+ animation: animL 20s linear infinite;
+ animation-delay: -5;
 }
 .ball:nth-child(3) {
-  left: 70%;
-  animation: animR 8s linear infinite;
-  animation-delay: -10;
+ left: 70%;
+ animation: animR 8s linear infinite;
+ animation-delay: -10;
 }
 .ball:nth-child(4) {
-  left: 90%;
-  animation: animL 25s linear infinite;
+ left: 90%;
+ animation: animL 25s linear infinite;
 }
 .ball:nth-child(5) {
-  left: 10%;
-  animation: animL 18s linear infinite;
+ left: 10%;
+ animation: animL 18s linear infinite;
 }
 .ball:nth-child(6) {
-  left: 60%;
-  animation: animR 15s linear infinite;
+ left: 60%;
+ animation: animR 15s linear infinite;
 }
 .ball:nth-child(7) {
-  left: 30%;
-  animation: animL 10s linear infinite;
-  animation-delay: -3;
+ left: 30%;
+ animation: animL 10s linear infinite;
+ animation-delay: -3;
 }
 .ball:nth-child(8) {
-  left: 40%;
-  animation: animR 12s linear infinite;
+ left: 40%;
+ animation: animR 12s linear infinite;
 }
 .set2 {
-  position: absolute;
-  transform: scale(3) rotateY(180deg);
-  filter: blur(2px);
-  background: transparent;
+ position: absolute;
+ transform: scale(3) rotateY(180deg);
+ filter: blur(2px);
+ background: transparent;
 }
 .set3 {
-  position: absolute;
-  transform: scale(0.8) rotateX(195deg);
-  background: transparent;
-  filter: blur(3px);
+ position: absolute;
+ transform: scale(0.8) rotateX(195deg);
+ background: transparent;
+ filter: blur(3px);
 }
 
 .set3 {
-  z-index: 0;
+ z-index: 0;
 }
 .context {
-  z-index: 1;
+ z-index: 1;
 }
 .set2 {
-  z-index: 3;
+ z-index: 3;
 }
 .set1 {
-  z-index: 2;
+ z-index: 2;
 }
