--- a/styles/org.css
+++ b/styles/org.css
@@ -38,11 +38,13 @@ nav {
 
 .board-content,
 .board-content2 {
+ 
  display: none;
  position: absolute;
  background-color: #082848;
  left: -25px;
  box-shadow: 0px 8px 16px 0 rgba(0, 0, 0, 2);
+ transition: 1s;
 }
 
 .navboard .board-content a:hover {
@@ -62,9 +64,11 @@ nav {
 
 .navboard:hover .board-content {
  display: block;
+ transition: 1s;
 }
 .navboard2:hover .board-content2 {
  display: block;
+ transition: 1s;
 }
 
 /* END NAV */
