--- a/styles/org.css
+++ b/styles/org.css
@@ -38,8 +38,9 @@ nav {
 
 .board-content,
 .board-content2 {
- 
- display: none;
+ opacity: 0;
+ z-index: -1;
+ transition: 1s;
  position: absolute;
  background-color: #082848;
  left: -25px;
@@ -63,12 +64,15 @@ nav {
 }
 
 .navboard:hover .board-content {
- display: block;
- transition: 1s;
+ z-index: 0;
+ opacity: 1;
+ transition: 0.75s;
+ 
 }
 .navboard2:hover .board-content2 {
- display: block;
- transition: 1s;
+ z-index: 0;
+ opacity: 1;
+ transition: 0.75s;
 }
 
 /* END NAV */
